# rtd-tutorial

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: PyPI.yml  pypi.yml  release.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/css/: remove_links.css
uq4rw7demo/: __init__.py  core.py
