[build-system]
requires = ["setuptools>=61.0.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "uq4rw7demo"
authors = [
    {name = "Sören Zapp"},
]
description = "Demo testing"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
keywords = ["retina", "stimulus", "white noise"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.16.0",
    "h5py>=3.2",
    "pathlib",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
Documentation = "http://szapp-rtd-tutorial.readthedocs.org/en/stable"
Repository = "https://github.com/szapp/rtd-tutorial.git"
"Bug Tracker" = "https://github.com/szapp/rtd-tutorial/issues"

[tool.setuptools.dynamic]
version = {attr = "uq4rw7demo.__version__"}

[tool.setuptools]
packages = ["uq4rw7demo"]
